Makefile to build the demos Example: make index_find
git-svn-id: http://svn.seqan.de/seqan/trunk@1267 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/projects/demos/Makefile
+++ b/seqan/projects/demos/Makefile
@@ -1,4 +1,16 @@
-SEQAN_INCLUDE=../library
-CPPFLAGS+=-I../../platforms/gcc
-CPPFLAGS+=-I$(SEQAN_INCLUDE)
-LDFLAGS+=-lrt
+SEQAN_DIR=..
+
+# The following 4 lines are for the SVN repository
+# You can remove them, if you use the snapshot
+ifeq ($(shell test -d ../library && echo Y),Y)
+  SEQAN_DIR=../library
+  CPPFLAGS+=-I../../platforms/gcc
+endif
+
+# Link against runtime library on Linux systems
+OS_NAME=$(shell uname)
+ifeq ($(OS_NAME),Linux)
+  LDFLAGS += -lrt
+endif
+
+CPPFLAGS+=-I$(SEQAN_DIR)
