Makefile clean target
git-svn-id: http://svn.seqan.de/seqan/trunk@1285 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/projects/demos/Makefile
+++ b/seqan/projects/demos/Makefile
@@ -16,11 +16,9 @@ endif
 CPPFLAGS+=-I$(SEQAN_DIR)
 
 all: $(basename $(wildcard *.cpp))
-
 index: $(basename $(wildcard index_*.cpp))
-
 graph: $(basename $(wildcard graph_*.cpp))
-
 modifier: $(basename $(wildcard modifier_*.cpp))
-
 file: $(basename $(wildcard file_*.cpp))
+clean:
+	rm -f $(basename $(wildcard *.cpp))
