git-svn-id: http://svn.seqan.de/seqan/trunk@1321 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/projects/demos/Makefile
+++ b/seqan/projects/demos/Makefile
@@ -14,6 +14,7 @@ ifeq ($(OS_NAME),Linux)
 endif
 
 CPPFLAGS+=-I$(SEQAN_DIR)
+#CPPFLAGS+=-O3
 
 all: $(basename $(wildcard *.cpp))
 index: $(basename $(wildcard index_*.cpp))
