added: auto platform detection, no need to select platform.h manually
git-svn-id: http://svn.seqan.de/seqan/trunk@3839 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/misc/vs_apps_projectfile/template_9.vcproj
+++ b/seqan/misc/vs_apps_projectfile/template_9.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../../platforms/windows;../../"
+				AdditionalIncludeDirectories="../../"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -117,7 +117,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="../../../../platforms/windows;../../"
+				AdditionalIncludeDirectories="../../"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
