Improvements in Nightly CMake file:
  * Building only binary directory, not a second time with test directory.
    This also shows all errors when building the app directory.
  * Putting Model asl ${MODEL} into CTEST_START(), to allow running in experimental mode.
    Running in nightly mode: {{{ctest -S Seqan_Nightly.cmake -VV -d 2>&1 | tee CTEST_nightly.log}}}.
    Running in experimental mode: {{{ctest -S Seqan_Nightly.cmake -M Experimental -VV -d 2>&1 | tee CTEST_experimental.log}}}
  * Higher warnings and error count reported.


git-svn-id: http://svn.seqan.de/seqan/trunk@5427 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/misc/ctest/Seqan_Nightly.cmake.example
+++ b/seqan/misc/ctest/Seqan_Nightly.cmake.example
@@ -18,6 +18,10 @@ SET ($ENV{LC_MESSAGES} "en_EN")
 SET (CTEST_SITE       "<SITE NAME>")
 SET (CTEST_BUILD_NAME "<BUILD NAME>")
 
+# Increase reported warning and error count.
+SET (CTEST_CUSTOM_MAXIMUM_NUMBER_OF_ERRORS 1000000)
+SET (CTEST_CUSTOM_MAXIMUM_NUMBER_OF_WARNINGS 1000000)
+
 # Variables describing the build environments.
 SET (CTEST_DIRECTORY "$ENV{HOME}/Nightly")
 SET (CTEST_SOURCE_ROOT_DIRECTORY "${CTEST_DIRECTORY}/seqan-trunk")
@@ -46,13 +50,13 @@ CMAKE_GENERATOR:INTERNAL=${CTEST_CMAKE_GENERATOR}
 # ------------------------------------------------------------
 # Perform the dashboard/testings steps.
 # ------------------------------------------------------------
-CTEST_START     (Nightly ${CTEST_SOURCE_DIRECTORY}/projects/library/cmake)
+CTEST_START     (${MODEL} ${CTEST_SOURCE_DIRECTORY}/projects/library/cmake)
 CONFIGURE_FILE  (${CTEST_SOURCE_DIRECTORY}/CTestConfig.cmake ${CTEST_SOURCE_ROOT_DIRECTORY}/CTestConfig.cmake COPYONLY)
 CTEST_UPDATE    (SOURCE "${CTEST_SOURCE_ROOT_DIRECTORY}")
 CTEST_CONFIGURE (BUILD "${CTEST_BINARY_DIRECTORY}")
 CTEST_BUILD     (BUILD "${CTEST_BINARY_DIRECTORY}")
-SET (CTEST_PROJECT_NAME "SeqAn_tests")
-CTEST_BUILD     (BUILD "${CTEST_BINARY_TEST_DIRECTORY}")
+#SET (CTEST_PROJECT_NAME "SeqAn_tests")
+#CTEST_BUILD     (BUILD "${CTEST_BINARY_TEST_DIRECTORY}")
 SET (CTEST_PROJECT_NAME "SeqAn")
 CTEST_TEST      (BUILD "${CTEST_BINARY_TEST_DIRECTORY}")
 CTEST_SUBMIT    ()
