Default model should be Nightly.
git-svn-id: http://svn.seqan.de/seqan/trunk@5440 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/misc/ctest/Seqan_Nightly.cmake.example
+++ b/seqan/misc/ctest/Seqan_Nightly.cmake.example
@@ -47,6 +47,12 @@ FILE(WRITE "${CTEST_BINARY_DIRECTORY}/CMakeCache.txt" "
 CMAKE_GENERATOR:INTERNAL=${CTEST_CMAKE_GENERATOR}
 ")
 
+# Set the default model to Nightly.
+IF (MODEL)
+ELSE (MODEL)
+  SET(MODEL "Nightly")
+ENDIF (MODEL)
+
 # ------------------------------------------------------------
 # Perform the dashboard/testings steps.
 # ------------------------------------------------------------
