add windows 32 support
git-svn-id: http://svn.seqan.de/seqan/trunk@5838 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/misc/swig/CMakeLists.txt
+++ b/seqan/misc/swig/CMakeLists.txt
@@ -152,6 +152,11 @@ INSTALL(FILES example.py  DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin )
 #ENDIF (WIN32)
 
 SET(CPACK_SET_DESTDIR "ON")
+IF (WIN32)
+	SET(CMAKE_INSTALL_PREFIX .)
+ENDIF (WIN32)
+
+SET(CPACK_GENERATOR "ZIP")
 set(CPACK_PACKAGE_VERSION_PATCH "${SUBVERSION_REVISION}")
 
 include (InstallRequiredSystemLibraries)
