change int calling to binary calling
git-svn-id: http://svn.seqan.de/seqan/trunk@5867 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/misc/swig/CMakeLists.txt
+++ b/seqan/misc/swig/CMakeLists.txt
@@ -158,8 +158,15 @@ ENDIF (WIN32)
 
 SET(CPACK_GENERATOR "ZIP")
 set(CPACK_PACKAGE_VERSION_PATCH "${SUBVERSION_REVISION}")
+IF (WIN32)
+	SET(CMAKE_INSTALL_PREFIX .)
+	SET(CPACK_GENERATOR "ZIP")
+ENDIF (WIN32)
 
 include (InstallRequiredSystemLibraries)
 INCLUDE (CPack) 
+################################################################################
+# to generate the package call  cpack -C CPackConfig.cmake 
+################################################################################
 
 
