Shuffling stuff in reweight_wit.
git-svn-id: http://svn.seqan.de/seqan/trunk@6052 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/projects/benchmarks/read_mappers/apps/CMakeLists.txt
+++ b/seqan/projects/benchmarks/read_mappers/apps/CMakeLists.txt
@@ -53,6 +53,8 @@ ADD_EXECUTABLE(verify_sam verify_sam.cpp)
 # ------------------------------------------------------------
 ADD_EXECUTABLE(do_search do_search.cpp)
 
+ADD_EXECUTABLE(reweight_wit reweight_wit.cpp)
+
 # ------------------------------------------------------------
 # Program: compare_sam_wit
 # ------------------------------------------------------------
