#00000: revised several code snippet
git-svn-id: http://svn.seqan.de/seqan/trunk@6234 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/teaching/master/maerker/trunk/src_journal/Makefile
+++ b/teaching/master/maerker/trunk/src_journal/Makefile
@@ -1,7 +1,9 @@
 CC = g++
-CFLAGS = -O0 -g3 -Wall -c -fmessage-length=0
+CFLAGS = -O0 -g3 -W -Wall -c -fmessage-length=0
 LIB_SEQAN = -IF:\Development\workspace_cpp_test\seqan\projects\library
 DIR_BIN = binaries/
+HEADERS = JournalIterator.h JournalString.h Node.h STNode.h Tree.h TreeIterator.h Utility.h
+
 
 ####################################################
 #Target CPPKurs
@@ -9,7 +11,7 @@ journal: main.o
 	${CC} main.o -o ${DIR_BIN}journal.exe 
 	@echo 'ready'
 	
-main.o: main.cpp
+main.o: main.cpp ${HEADERS}
 	${CC} ${CFLAGS} $(LIB_SEQAN) main.cpp
 	
 ####################################################
