--- a/seqan/projects/benchmarks/read_mappers/apps/CMakeLists.txt
+++ b/seqan/projects/benchmarks/read_mappers/apps/CMakeLists.txt
@@ -30,11 +30,11 @@ if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
   target_link_libraries (compare_sam_wit rt)
 endif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 
-add_executable (sam_info sam_info.cpp)
-add_dependencies (sam_info ${SEQAN_TARGET})
-if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-  target_link_libraries (sam_info rt)
-endif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+#add_executable (sam_info sam_info.cpp)
+#add_dependencies (sam_info ${SEQAN_TARGET})
+#if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+#  target_link_libraries (sam_info rt)
+#endif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 
 add_executable (fastq_info fastq_info.cpp)
 add_dependencies (fastq_info ${SEQAN_TARGET})
