--- a/seqan/projects/benchmarks/read_mappers/apps/CMakeLists.txt
+++ b/seqan/projects/benchmarks/read_mappers/apps/CMakeLists.txt
@@ -18,11 +18,11 @@ if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
   target_link_libraries (do_search rt)
 endif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 
-add_executable (reweight_wit reweight_wit.cpp)
-add_dependencies (reweight_wit ${SEQAN_TARGET})
-if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-  target_link_libraries (reweight_wit rt)
-endif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+# add_executable (reweight_wit reweight_wit.cpp)
+# add_dependencies (reweight_wit ${SEQAN_TARGET})
+# if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+#   target_link_libraries (reweight_wit rt)
+# endif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 
 add_executable (compare_sam_wit compare_sam_wit.cpp)
 add_dependencies (compare_sam_wit ${SEQAN_TARGET})
@@ -30,11 +30,11 @@ if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
   target_link_libraries (compare_sam_wit rt)
 endif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 
-#add_executable (sam_info sam_info.cpp)
-#add_dependencies (sam_info ${SEQAN_TARGET})
-#if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-#  target_link_libraries (sam_info rt)
-#endif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+# add_executable (sam_info sam_info.cpp)
+# add_dependencies (sam_info ${SEQAN_TARGET})
+# if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+#   target_link_libraries (sam_info rt)
+# endif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 
 add_executable (fastq_info fastq_info.cpp)
 add_dependencies (fastq_info ${SEQAN_TARGET})
