Rewording in-source build warnings.
git-svn-id: http://svn.seqan.de/seqan/trunk@9249 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/CMakeLists.txt
+++ b/seqan/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required (VERSION 2.6)
+
 # ===========================================================================
 # Warn People About the Perils Of In-Source Builds
 # ===========================================================================
@@ -6,12 +8,13 @@ if (EXISTS "$ENV{PWD}/CMakeLists.txt")
   if (EXISTS "$ENV{PWD}/I_WANT_IN_SOURCE_BUILDS")
     set(IN_SOURCE_BUILD YES)
   else (EXISTS "$ENV{PWD}/I_WANT_IN_SOURCE_BUILDS")
-    message("ERROR: In-source builds are not allowed by default")
+    message("CAUTION: In-source builds are not allowed by default!")
     message("")
-    message("(If you want to use Eclipse and you know what you are doing,")
-    message("see below)")
+    message("(If you want to use Eclipse and have read the 'Getting Started,")
+    message("with Eclipse Tutorial' then see the instructions below.)")
     message("")
-    message("Instead, go to into the directory build and call CMake from there.")
+    message("Instead of doing in source builds, go to into the directory build")
+    message("and call CMake from there.")
     message("We recommend you to create an additional directory level, this")
     message("allows you to have multiple build configurations (e.g. Debug,")
     message("Release) or project types.")
@@ -19,20 +22,20 @@ if (EXISTS "$ENV{PWD}/CMakeLists.txt")
     message("  cd build")
     message("  mkdir Debug")
     message("  cd Debug")
-    message("  cmake ../.. -D CMAKE_BUILD_TYPE=Debug")
+    message("  cmake ../.. -DCMAKE_BUILD_TYPE=Debug")
     message("")
-    message("CMake has now created some files in this directory, that you have")
-    message("remove before executing the above commands.")
+    message("NOTE: CMake has created some files in this directory that you have")
+    message("to remove before executing the above commands.")
     message("")
     message("  rm -rf CMakeCache.txt CMakeFiles")
     message("")
-    message("If you want to use Eclipse, then you might want to have in-source")
+    message("If you want to use Eclipse then you might want to have in-source")
     message("builds because of limitations of Eclipse CDT4.  In this case")
     message("Create a file in this directory called I_WANT_IN_SOURCE_BUILDS:")
     message("")
     message("  touch I_WANT_IN_SOURCE_BUILDS")
     message("")
-    message(FATAL_ERROR "Please follow these instructions.")
+    message(FATAL_ERROR "Please follow the instructions above.")
   endif (EXISTS "$ENV{PWD}/I_WANT_IN_SOURCE_BUILDS")
 endif (EXISTS "$ENV{PWD}/CMakeLists.txt")
 
