Customize CMakeLists for some apps
git-svn-id: http://svn.seqan.de/seqan/trunk@9254 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/core/apps/mason/CMakeLists.txt
+++ b/seqan/core/apps/mason/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required (VERSION 2.6)
 project (core_apps_mason)
 
 # Update the list of file names below if you add source files to your application.
-seqan_add_executable(mason mason.cpp mason.h)
+seqan_add_executable(mason mason.cpp
+			   mason.h)
