--- a/seqan/core/apps/rabema/CMakeLists.txt
+++ b/seqan/core/apps/rabema/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required (VERSION 2.6)
 project (core_apps_rabema)
 
 # Update the list of file names below if you add source files to your application.
-seqan_add_executable(rabema rabema.cpp rabema.h)
+seqan_add_executable(rabema rabema.cpp
+			    rabema.h)
