--- a/seqan/core/apps/seqan_tcoffee/CMakeLists.txt
+++ b/seqan/core/apps/seqan_tcoffee/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required (VERSION 2.6)
 project (core_apps_seqan_tcoffee)
 
 # Update the list of file names below if you add source files to your application.
-seqan_add_executable(seqan_tcoffee seqan_tcoffee.cpp seqan_tcoffee.h)
+seqan_add_executable(seqan_tcoffee seqan_tcoffee.cpp)
