Customize CMakeLists for some apps
git-svn-id: http://svn.seqan.de/seqan/trunk@9255 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/extras/apps/rep_sep/CMakeLists.txt
+++ b/seqan/extras/apps/rep_sep/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required (VERSION 2.6)
 project (extras_apps_rep_sep)
 
 # Update the list of file names below if you add source files to your application.
-seqan_add_executable(rep_sep rep_sep.cpp rep_sep.h)
+seqan_add_executable(rep_sep rep_sep.cpp)
