--- a/seqan/sandbox/emde/apps/razers2/CMakeLists.txt
+++ b/seqan/sandbox/emde/apps/razers2/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required (VERSION 2.6)
 project (sandbox_emde_apps_razers2)
 
 # Update the list of file names below if you add source files to your application.
-seqan_add_executable(razers2 razers2.cpp razers2.h)
+seqan_add_executable(razers2 razers.cpp razers.h)
