Customize CMakeLists for some apps
git-svn-id: http://svn.seqan.de/seqan/trunk@9258 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/core/apps/razers/CMakeLists.txt
+++ b/seqan/core/apps/razers/CMakeLists.txt
@@ -2,4 +2,11 @@ cmake_minimum_required (VERSION 2.6)
 project (core_apps_razers)
 
 # Update the list of file names below if you add source files to your application.
-seqan_add_executable(razers razers.cpp razers.h)
+seqan_add_executable(razers razers.cpp
+			    razers.h
+			    outputFormat.h
+			    paramChooser.h
+			    razers_matepairs.h
+			    razers_parallel.h
+			    razers_spliced.h
+			    readSimulator.h)
