--- a/seqan/core/apps/mason/CMakeLists.txt
+++ b/seqan/core/apps/mason/CMakeLists.txt
@@ -3,4 +3,10 @@ project (core_apps_mason)
 
 # Update the list of file names below if you add source files to your application.
 seqan_add_executable(mason mason.cpp
-			   mason.h)
+			   mason.h
+			   simulate_454.h
+			   simulate_454_base_calling.h
+			   simulate_illumina.h
+			   simulate_sanger.h
+			   store_config.h
+			   util.h)
