--- a/seqan/core/apps/CMakeLists.txt
+++ b/seqan/core/apps/CMakeLists.txt
@@ -1,1 +1,6 @@
-seqan_project_just_include_all_subdirs(seqan_core_apps)
+cmake_minimum_required (VERSION 2.6)
+project (seqan_core_apps)
+
+seqan_setup_apps(core_apps)  # Setup flags etc.
+
+seqan_add_all_subdirectories()  # include_directory(*)
