Fixing core demos build files.
git-svn-id: http://svn.seqan.de/seqan/trunk@9272 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/core/demos/CMakeLists.txt
+++ b/seqan/core/demos/CMakeLists.txt
@@ -4,3 +4,6 @@ project (seqan_core_demos)
 seqan_setup_apps(core_demos)
 
 seqan_add_all_executables(core_demos)
+#seqan_add_all_executables()
+
+seqan_add_all_subdirectories()
