Fixing CMakeLists.txt files for sandbox tests.
git-svn-id: http://svn.seqan.de/seqan/trunk@9355 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/extras/tests/synopsis/CMakeLists.txt
+++ b/seqan/extras/tests/synopsis/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required (VERSION 2.6)
 project (extras_tests_synopsis)
 
 # Update the list of file names below if you add source files to your test.
-seqan_add_test_executable(test_synopsis test_synopsis.cpp test_synopsis.h)
+seqan_add_test_executable(test_synopsis test_synopsis.cpp test_synopsis_counter_buckets.h test_synopsis_hot_list.h test_synopsis_histogram_set.h)
