Including CTest in CMakeLists.txt
git-svn-id: http://svn.seqan.de/seqan/trunk@9414 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/CMakeLists.txt
+++ b/seqan/CMakeLists.txt
@@ -62,6 +62,8 @@ set(CMAKE_MODULE_PATH
     ${CMAKE_CURRENT_SOURCE_DIR}/util/cmake
     ${CMAKE_MODULE_PATH})
 
+include(CTest)
+
 find_package (PythonInterp)
 find_package (SeqAn)
 
