auto overlap chooser
git-svn-id: http://svn.seqan.de/seqan/trunk@9987 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/sandbox/weese/apps/razers3/CMakeLists.txt
+++ b/seqan/sandbox/weese/apps/razers3/CMakeLists.txt
@@ -29,6 +29,9 @@ if (OPENMP_FOUND)
                                 razers_parallel_reads.h
                                 razers_window.h
                                 readSimulator.h)
+
+  seqan_add_executable (compPHSens compPHSens.cpp razers.h)
+
 elseif (OPENMP_FOUND)
   message(STATUS "Not building RazerS3, since OpenMP could not be found.")
 endif (OPENMP_FOUND)
