--- a/seqan/misc/uncrustify.cfg
+++ b/seqan/misc/uncrustify.cfg
@@ -77,7 +77,7 @@ mod_sort_using=false
 mod_sort_include=false
 mod_move_case_break=false
 mod_remove_empty_return=false
-cmt_indent_multi=true
+cmt_indent_multi=false
 cmt_c_group=false
 cmt_c_nl_start=false
 cmt_c_nl_end=false
@@ -96,7 +96,6 @@ input_tab_size=4
 output_tab_size=4
 indent_columns=4
 nl_after_func_body=2
-cmt_width=120
 newlines=auto
 indent_with_tabs=0
 sp_arith=add
@@ -166,9 +165,9 @@ sp_incdec=remove
 sp_cond_colon=force
 sp_cond_question=force
 sp_case_label=force
-sp_cmt_cpp_start=add
+sp_cmt_cpp_start=ignore
 nl_start_of_file=remove
-nl_end_of_file=add
+nl_end_of_file=force
 nl_assign_brace=force
 nl_fcall_brace=force
 nl_enum_brace=force
