Updates to uncrustify configuration.
git-svn-id: http://svn.seqan.de/seqan/trunk@10049 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/misc/uncrustify.cfg
+++ b/seqan/misc/uncrustify.cfg
@@ -41,8 +41,8 @@ align_single_line_brace=false
 align_nl_cont=false
 align_left_shift=true
 nl_collapse_empty_body=true
-nl_assign_leave_one_liners=false
-nl_class_leave_one_liners=false
+nl_assign_leave_one_liners=true
+nl_class_leave_one_liners=true
 nl_enum_leave_one_liners=true
 nl_getset_leave_one_liners=false
 nl_func_leave_one_liners=false
@@ -118,12 +118,13 @@ sp_before_unnamed_byref=force
 sp_after_byref=force
 sp_after_byref_func=force
 sp_before_byref_func=force
+sp_after_type=add
 sp_template_angle=force
 sp_before_angle=remove
 sp_inside_angle=remove
 sp_after_angle=remove
 sp_angle_paren=remove
-sp_angle_word=remove
+sp_angle_word=add
 sp_before_sparen=force
 sp_inside_sparen=remove
 sp_before_square=remove
@@ -188,6 +189,7 @@ nl_while_brace=force
 nl_do_brace=force
 nl_brace_while=force
 nl_switch_brace=force
+nl_namespace_brace=force
 nl_template_class=force
 nl_class_brace=force
 nl_func_paren=remove
