Adding do_search program to Rabema, not ignoring alignments at the borders.
git-svn-id: http://svn.seqan.de/seqan/trunk@10078 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/core/apps/rabema/CMakeLists.txt
+++ b/seqan/core/apps/rabema/CMakeLists.txt
@@ -18,3 +18,6 @@ seqan_add_executable(rabema rabema.cpp
 			    verification.h
 			    wit_store.h
 			    witio.h)
+
+seqan_add_executable(do_search do_search.cpp witio.h find_myers_ukkonen_ext.h)
+
