Tutorial for new stream module.
git-svn-id: http://svn.seqan.de/seqan/trunk@10099 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/extras/demos/CMakeLists.txt
+++ b/seqan/extras/demos/CMakeLists.txt
@@ -4,3 +4,5 @@ project (seqan_extras_demos)
 seqan_setup_apps(extra_demos)
 
 seqan_add_all_executables(extras_demos)
+
+seqan_add_all_subdirectories()
