--- a/seqan/extras/tests/ext_lh3/CMakeLists.txt
+++ b/seqan/extras/tests/ext_lh3/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.6)
-project (sandbox_holtgrew_tests_ext_lh3)
+project (extras_tests_ext_lh3)
 
 # Update the list of file names below if you add source files to your test.
 seqan_add_test_executable(test_ext_lh3 test_ext_lh3.cpp test_stream_bgzf.h)
