Not using ENV{PWD} but CMAKE_CURRENT_SOURCE_DIR in root CMakeLists.txt.
git-svn-id: http://svn.seqan.de/seqan/trunk@10249 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/CMakeLists.txt
+++ b/seqan/CMakeLists.txt
@@ -4,10 +4,10 @@ cmake_minimum_required (VERSION 2.6)
 # Warn People About the Perils Of In-Source Builds
 # ===========================================================================
 
-if (EXISTS "$ENV{PWD}/CMakeLists.txt")
-  if (EXISTS "$ENV{PWD}/I_WANT_IN_SOURCE_BUILDS")
+if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt")
+  if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/I_WANT_IN_SOURCE_BUILDS")
     set(IN_SOURCE_BUILD YES)
-  else (EXISTS "$ENV{PWD}/I_WANT_IN_SOURCE_BUILDS")
+  else (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/I_WANT_IN_SOURCE_BUILDS")
     message("CAUTION: In-source builds are not allowed by default!")
     message("")
     message("(If you want to use Eclipse and have read the 'Getting Started,")
@@ -36,8 +36,8 @@ if (EXISTS "$ENV{PWD}/CMakeLists.txt")
     message("  touch I_WANT_IN_SOURCE_BUILDS")
     message("")
     message(FATAL_ERROR "Please follow the instructions above.")
-  endif (EXISTS "$ENV{PWD}/I_WANT_IN_SOURCE_BUILDS")
-endif (EXISTS "$ENV{PWD}/CMakeLists.txt")
+  endif (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/I_WANT_IN_SOURCE_BUILDS")
+endif (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt")
 
 cmake_minimum_required (VERSION 2.6)
 project (seqan)
