Updating instructions in root CMakeLists.txt.
git-svn-id: http://svn.seqan.de/seqan/trunk@10250 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/CMakeLists.txt
+++ b/seqan/CMakeLists.txt
@@ -27,13 +27,15 @@ if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt")
     message("NOTE: CMake has created some files in this directory that you have")
     message("to remove before executing the above commands.")
     message("")
-    message("  rm -rf CMakeCache.txt CMakeFiles")
+    message("  [Linux, Mac Os X]  rm -rf CMakeCache.txt CMakeFiles")
+    message("  [Windows]          del CMakeCache.txt ; rmdir /S CMakeFiles")
     message("")
     message("If you want to use Eclipse then you might want to have in-source")
     message("builds because of limitations of Eclipse CDT4.  In this case")
     message("Create a file in this directory called I_WANT_IN_SOURCE_BUILDS:")
     message("")
-    message("  touch I_WANT_IN_SOURCE_BUILDS")
+    message("  [Linux, Mac Os X]  touch I_WANT_IN_SOURCE_BUILDS")
+    message("  [Windows]          type nul >> I_WANT_IN_SOURCE_BUILDS")
     message("")
     message(FATAL_ERROR "Please follow the instructions above.")
   endif (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/I_WANT_IN_SOURCE_BUILDS")
