--- a/seqan/CMakeLists.txt
+++ b/seqan/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required (VERSION 2.6)
 
 # ===========================================================================
-# Iff the file TURN_ON_SEQAN_INSTRUMENTATION exists in the source root
+# Iff the file INST exists in the source root
 # turn on SeqAn instrumentation for experimental data collection.
 # ===========================================================================
 
-if(EXISTS ${CMAKE_SOURCE_DIR}/TURN_ON_SEQAN_INSTRUMENTATION)
+if(EXISTS ${CMAKE_SOURCE_DIR}/INST)
   set(SEQAN_INSTRUMENTATION YES)
-else(EXISTS ${CMAKE_SOURCE_DIR}/TURN_ON_SEQAN_INSTRUMENTATION)
+else(EXISTS ${CMAKE_SOURCE_DIR}/INST)
   set(SEQAN_INSTRUMENTATION NO)
-endif(EXISTS ${CMAKE_SOURCE_DIR}/TURN_ON_SEQAN_INSTRUMENTATION)
+endif(EXISTS ${CMAKE_SOURCE_DIR}/INST)
 
 
 # ===========================================================================
