Support for make docs.
git-svn-id: http://svn.seqan.de/seqan/trunk@10406 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/CMakeLists.txt
+++ b/seqan/CMakeLists.txt
@@ -93,5 +93,6 @@ seqan_setup_global()
 # ===========================================================================
 
 add_subdirectory(core)
+add_subdirectory(docs)
 add_subdirectory(extras)
 add_subdirectory(sandbox)
