--- a/seqan/core/apps/razers2/CMakeLists.txt
+++ b/seqan/core/apps/razers2/CMakeLists.txt
@@ -8,3 +8,6 @@ seqan_add_executable(razers2 razers.cpp
                              paramChooser.h
                              razers_matepairs.h
                              readSimulator.h)
+
+install(TARGETS razers2
+        DESTINATION bin)
