--- a/seqan/core/apps/tree_recon/CMakeLists.txt
+++ b/seqan/core/apps/tree_recon/CMakeLists.txt
@@ -3,3 +3,6 @@ project (core_apps_tree_recon)
 
 # Update the list of file names below if you add source files to your application.
 seqan_add_executable(tree_recon tree_recon.cpp)
+
+install(TARGETS tree_recon
+        DESTINATION bin)
