First steps towards installation with CPack.
git-svn-id: http://svn.seqan.de/seqan/trunk@10407 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/CMakeLists.txt
+++ b/seqan/CMakeLists.txt
@@ -96,3 +96,9 @@ add_subdirectory(core)
 add_subdirectory(docs)
 add_subdirectory(extras)
 add_subdirectory(sandbox)
+
+# ===========================================================================
+# Include CPack
+# ===========================================================================
+
+#include(${CMAKE_CURRENT_SOURCE_DIR}/util/cmake/packge.cmake)
