CPack support for SeqAn.
git-svn-id: http://svn.seqan.de/seqan/trunk@10408 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/CMakeLists.txt
+++ b/seqan/CMakeLists.txt
@@ -101,4 +101,4 @@ add_subdirectory(sandbox)
 # Include CPack
 # ===========================================================================
 
-#include(${CMAKE_CURRENT_SOURCE_DIR}/util/cmake/packge.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/util/cmake/package.cmake)
