--- a/seqan/util/ports/science/seqan/Portfile
+++ b/seqan/util/ports/science/seqan/Portfile
@@ -7,12 +7,17 @@ name                SeqAn
 version             1.3.1
 categories          science
 platforms           darwin
-license             GPL
-maintainers         okohlbacher
+
+license             BSD
+maintainers         david.weese@fu-berlin.de \
+                    knut.reinert@fu-berlin.de
 
 description         C++ Sequence Analysis Library
 
-long_description    SeqAn is an open source C++ library of efficient algorithms and data structures for the analysis of sequences with the focus on biological data.
+long_description    SeqAn is an open source C++ library of efficient algorithms \
+                    and data structures for the analysis of sequences with the \
+                    focus on biological data. The library is licensed under the \
+                    3-clause BSD license, the applications are licensed under GPL.
 
 homepage            http://www.seqan.de
 
